chore(adjustments) - adjust  font size for mobile - add button to join whatsapp community - change menu icon on mobile to purple

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         <a href="#!" class="brand-logo"
           ><img
             src="https://res.cloudinary.com/dcft8yhab/image/upload/v1579545975/spillcode_logo.svg"
-            height="60"
+            height="50"
             alt="company's logo"
             class=""
         /></a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"
-          ><i class="material-icons">menu</i></a
+          ><i class="material-icons purple-text">menu</i></a
         >
         <ul class="right hide-on-med-and-down">
           <li><a href="sass.html" class="nav-items">About Us</a></li>
@@ -70,6 +70,7 @@
           Shaping the world... one line at a time.
         </p>
         <p><a class="waves-effect waves-light btn-large buttons">Request An Application</a></p>
+        <p><a class="waves-effect waves-light btn-large buttons" id="whatsapp-top-button"><img src="https://res.cloudinary.com/dcft8yhab/image/upload/v1579989401/whatsapp_icon.png" height="30px" style="margin-top:14px; margin-left: -20px; position: absolute;" alt=""><span style="margin-left: 15px">Join Our WhatsApp Community</span></a></p>
       </section>
       <section class="col s12 m6 l6">
         <div class="welcome-img-box">
@@ -104,12 +105,11 @@
                 </div>
                 <div class="card-content">
                   <span class="card-title activator grey-text text-darken-4">Ecommerce<i class="material-icons right">more_vert</i></span>
-                  <p><a class="waves-effect waves-light btn-large buttons">Request An Ecommerce wesite</a></p>
+                  <p><a class="waves-effect waves-light btn-large buttons">Request An Ecommerce website</a></p>
                 </div>
                 <div class="card-reveal">
                   <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
                   <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                  <p><a class="waves-effect waves-light btn-large buttons">Request An Ecommerce wesite</a></p>
                 </div>
               </div>
             </div>
