chore( add favicon ) - add favicon - change text from  to  in whatsapp button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>SpillCode</title>
+    <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans&display=swap"
@@ -70,7 +71,7 @@
           Shaping the world... one line at a time.
         </p>
         <p><a class="waves-effect waves-light btn-large buttons">Request An Application</a></p>
-        <p><a class="waves-effect waves-light btn-large buttons" id="whatsapp-top-button"><img src="https://res.cloudinary.com/dcft8yhab/image/upload/v1579989401/whatsapp_icon.png" height="30px" style="margin-top:14px; margin-left: -20px; position: absolute;" alt=""><span style="margin-left: 15px">Join Our WhatsApp Community</span></a></p>
+        <p><a class="waves-effect waves-light btn-large buttons" id="whatsapp-top-button"><img src="https://res.cloudinary.com/dcft8yhab/image/upload/v1579989401/whatsapp_icon.png" height="30px" style="margin-top:14px; margin-left: -20px; position: absolute;" alt=""><span style="margin-left: 15px">Join Our Community</span></a></p>
       </section>
       <section class="col s12 m6 l6">
         <div class="welcome-img-box">
