--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
           ><i class="material-icons purple-text">menu</i></a
         >
         <ul class="right hide-on-med-and-down">
-          <li><a href="sass.html" class="nav-items">About Us</a></li>
-          <li><a href="badges.html" class="nav-items">Solutions</a></li>
+          <li><a href="#" class="nav-items">About Us</a></li>
+          <li><a href="#solutions" class="nav-items">Solutions</a></li>
           <li>
-            <a href="collapsible.html" class="nav-items">Recent Projects</a>
+            <a href="#" class="nav-items">Recent Projects</a>
           </li>
-          <li><a href="mobile.html" class="nav-items">Promo</a></li>
-          <li><a href="mobile.html" class="nav-items">Become An Affiliate</a></li>
+          <li><a href="#" class="nav-items">Promo</a></li>
+          <li><a href="#affiliate" class="nav-items">Become An Affiliate</a></li>
 
         </ul>
       </div>
@@ -85,16 +85,17 @@
     </article>
 
     <article class="waves"></article>
-    <article class="solutions">
+    <article class="solutions" id="solutions">
       <div class="container center-align">
         <h3 class="heading center-align" id="solutions-heading">
           SOLUTIONS WE PROVIDE
         </h3>
         <p class="white-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum
-          dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua.
+          Because of our target and resolve to help small and medium scale
+          businesses grow and reach a wider audience as well as make more profit
+          and improve brand, we develop solutions targetted towards them. We exists
+          to help you and we  sure we leave your business in a better place. we try 
+          to acheive this by providing the following solutions.
         </p>
 
         <div class="solution-cards">
@@ -106,11 +107,17 @@
                 </div>
                 <div class="card-content">
                   <span class="card-title activator grey-text text-darken-4">Ecommerce<i class="material-icons right">more_vert</i></span>
-                  <p><a class="waves-effect waves-light btn-large buttons">Request An Ecommerce website</a></p>
+                  <p><a class="waves-effect waves-light btn-large buttons">Contact Us</a></p>
                 </div>
                 <div class="card-reveal">
-                  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                  <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                  <span class="card-title grey-text text-darken-4">Ecommerce<i class="material-icons right">close</i></span>
+                  <p>
+                    You can make more selling online. With a massive increase in ecommerce businesses, 
+                    customers are getting more comfortable buying their products online. If you own a 
+                    small business, manufacture your own products, etc. You might want to try taking 
+                    your business to the next level with ecommerce.
+                  </p>
+                  <p><a class="waves-effect waves-light btn-large buttons">Contact Us</a></p>
                 </div>
               </div>
             </div>
@@ -122,12 +129,17 @@
                 </div>
                 <div class="card-content">
                   <span class="card-title activator grey-text text-darken-4">Portfolios<i class="material-icons right">more_vert</i></span>
-                  <p><a class="waves-effect waves-light btn-large buttons">Request A Portfolio Wesite</a></p>
+                  <p><a class="waves-effect waves-light btn-large buttons">Contact Us</a></p>
                 </div>
                 <div class="card-reveal">
-                  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                  <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                  <p><a class="waves-effect waves-light btn-large buttons">Button</a></p>
+                  <span class="card-title grey-text text-darken-4">Portfolios<i class="material-icons right">close</i></span>
+                  <p>
+                    From creating a portfolio for your business where you advertise what your business is 
+                    and add  about information on how people could get in contact with you ( like this site 
+                    you're on right now ), to creating a personal portfolio where you talk about your services 
+                    and how people could get in contact with you. We got you covered.
+                  </p>
+                  <p><a class="waves-effect waves-light btn-large buttons">Contact Us</a></p>
                 </div>
               </div>
             </div>
@@ -140,13 +152,17 @@
                   <img class="activator responsive-img" src="https://res.cloudinary.com/dcft8yhab/image/upload/v1579523950/undraw_add_to_cart_vkjp_1.svg">
                 </div>
                 <div class="card-content">
-                  <span class="card-title activator grey-text text-darken-4">Ecommerce<i class="material-icons right">more_vert</i></span>
-                  <p><a class="waves-effect waves-light btn-large buttons">Request An Ecommerce wesite</a></p>
+                  <span class="card-title activator grey-text text-darken-4">Blogs<i class="material-icons right">more_vert</i></span>
+                  <p><a class="waves-effect waves-light btn-large buttons">Contact Us</a></p>
                 </div>
                 <div class="card-reveal">
-                  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                  <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                  <p><a class="waves-effect waves-light btn-large buttons">Request An Ecommerce wesite</a></p>
+                  <span class="card-title grey-text text-darken-4">Blogs<i class="material-icons right">close</i></span>
+                  <p>
+                    Have a passion for blogging? Let's help you create that unique platform where you share 
+                    your thoughts or articles on trending issues or anything at all you feel you want to talk 
+                    about.
+                  </p>
+                  <p><a class="waves-effect waves-light btn-large buttons">Contact Us</a></p>
                 </div>
               </div>
             </div>
@@ -158,12 +174,16 @@
                 </div>
                 <div class="card-content">
                   <span class="card-title activator grey-text text-darken-4">Mobile Apps<i class="material-icons right">more_vert</i></span>
-                  <p><a class="waves-effect waves-light btn-large buttons">Request A Mobile App</a></p>
+                  <p><a class="waves-effect waves-light btn-large buttons">Contact Us</a></p>
                 </div>
                 <div class="card-reveal">
-                  <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                  <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                  <p><a class="waves-effect waves-light btn-large buttons">Request A Mobile App</a></p>
+                  <span class="card-title grey-text text-darken-4">Mobile Apps<i class="material-icons right">close</i></span>
+                  <p>
+                    Feel like your business now needs a mobile application? Well, we got you covered!
+                    With our passionate team of mobile developers, we aim to develop stunning mobile
+                    solutions with great simplicity and accessibility while maintaining the beautiful look you'll love.
+                  </p>
+                  <p><a class="waves-effect waves-light btn-large buttons">Contact Us</a></p>
                 </div>
               </div>
             </div>
@@ -203,8 +223,9 @@
                 </div>
                 <div class="col s10">
                   <span class="black-text">
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    Receive Special discount offers, tips on how to scale a website, and ecommerce tips by subscribing to our weekly mail!
+                    <b style="display: block; line-height: 0;" class="center-align">SEO</b> <br>
+                     We provide great search engine optimisation to enable you get great ranking on google. 
+                     By doing this we aim to 
                   </span>
                 </div>
               </div>
@@ -221,7 +242,8 @@
                 <div class="col s10">
                   <span class="black-text">
                     This is a square image. Add the "circle" class to it to make it appear circular.
-                    Receive Special discount offers, tips on how to scale a website, and ecommerce tips by subscribing to our weekly mail!
+                    Receive Special discount offers, tips on how to scale a website, and ecommerce tips by 
+                    subscribing to our weekly mail!
                   </span>
                 </div>
               </div>
@@ -266,7 +288,7 @@
       </section>
     </article>
 
-    <article class="affiliate center-align">
+    <article class="affiliate center-align" id="affiliate">
       <h3 class="heading affiliate-heading">Earn Money With Affiliate</h3>
       <div class="row container">
         <div class="col s12 m6 lg">
