add logo to sidenav for mobile display

--- a/index.html
+++ b/index.html
@@ -68,17 +68,26 @@
         </div>
       </nav>
     </div>
-    <ul class="sidenav" id="mobile-demo">
-      <li><a href="#">About Us</a></li>
-      <li><a href="#solutions">Solutions</a></li>
-      <li><a href="#awesome_perks">Awesome Perks</a></li>
-      <li><a href="#affiliate">Become An Affiliate</a></li>
-    </ul>
+    <div class="sidenav" id="mobile-demo">
+      <a href="#!" class="brand-logo">
+        <img src="https://res.cloudinary.com/dcft8yhab/image/upload/v1579545975/spillcode_logo.svg"
+              height="50"
+              alt="company's logo"
+              class=""
+        /></a>
+        <hr>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#solutions">Solutions</a></li>
+        <li><a href="#awesome_perks">Awesome Perks</a></li>
+        <li><a href="#affiliate">Become An Affiliate</a></li>
+      </ul>
+    </div>
 
     <!-- Modal Structure -->
     <div id="contact_modal" class="modal">
       <div class="modal-content center-align">
-        <h4>Here's How</h4>
+        <h5>Here's How</h5>
         <p>
           <a
             class="waves-effect waves-light btn-large buttons"
