add on scroll animation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>SpillCode</title>
+    <title>Spill Code</title>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
     <link
@@ -165,7 +165,7 @@
         <h3 class="heading center-align" id="solutions-heading">
           SOLUTIONS WE PROVIDE
         </h3>
-        <p class="white-text">
+        <p class="white-text solutions-intro-text">
           Because of our target and resolve to help small and medium scale
           businesses grow and reach a wider audience as well as make more profit
           and improve brand, we develop solutions targetted towards them. We
@@ -176,7 +176,7 @@
         <div class="solution-cards">
           <section class="row">
             <div class="col s12 m6 l5 offset-l1">
-              <div class="card z-depth-3">
+              <div class="card z-depth-3 solution-card-1">
                 <div
                   class="card-image waves-effect waves-block waves-light solutions-card-image-height"
                 >
@@ -215,7 +215,7 @@
             </div>
 
             <div class="col s12 m6 l5">
-              <div class="card z-depth-3">
+              <div class="card z-depth-3 solution-card-2">
                 <div
                   class="card-image waves-effect waves-block waves-light solutions-card-image-height"
                 >
@@ -256,7 +256,7 @@
 
           <section class="row">
             <div class="col s12 m6 l5 offset-l1">
-              <div class="card z-depth-3">
+              <div class="card z-depth-3 solution-card-3">
                 <div
                   class="card-image waves-effect waves-block waves-light solutions-card-image-height"
                 >
@@ -291,7 +291,7 @@
             </div>
 
             <div class="col s12 m6 l5">
-              <div class="card z-depth-3">
+              <div class="card z-depth-3 solution-card-4">
                 <div
                   class="card-image waves-effect waves-block waves-light solutions-card-image-height"
                 >
@@ -635,6 +635,7 @@
       <p id="footer">All Rights Reserved. SpillCode 2020.</p>
     </footer>
 
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script
       src="https://kit.fontawesome.com/b8cb366812.js"
