--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
       <section class="extras-inner-container">
         <div class="row">
           <div class="col s12 m7 l6">
-            <div class="card-panel grey lighten-5 z-depth-1">
+            <div class="card-panel grey lighten-5 z-depth-1 stunning-web-designs">
               <div class="row valign-wrapper">
                 <div class="col s2">
                   <img
@@ -420,8 +420,8 @@
                       >STUNNING WEB DESIGNS</b
                     >
                     <br />
-                    Beautiful websites attracts people and make them what to interract more
-                    with your website. Knowing this, we make sure our we develop high performant 
+                    Beautiful websites attracts people and make them want to interract more
+                    with your website. Knowing this, we make sure we develop high performant 
                     sites/apps but with stunning designs.
                   </span>
                 </div>
@@ -431,7 +431,7 @@
         </div>
         <div class="row">
           <div class="col s12 m7 l6 offset-l6 offset-m4">
-            <div class="card-panel grey lighten-5 z-depth-1">
+            <div class="card-panel grey lighten-5 z-depth-1 great-customer-support">
               <div class="row valign-wrapper">
                 <div class="col s2">
                   <img
@@ -457,7 +457,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col s12 m7 l6">
+          <div class="col s12 m7 l6 business-growth-tips">
             <div class="card-panel grey lighten-5 z-depth-1">
               <div class="row valign-wrapper">
                 <div class="col s2">
@@ -485,7 +485,7 @@
         </div>
         <div class="row">
           <div class="col s12 m7 l6 offset-l6 offset-m4">
-            <div class="card-panel grey lighten-5 z-depth-1">
+            <div class="card-panel grey lighten-5 z-depth-1 scalability">
               <div class="row valign-wrapper">
                 <div class="col s2">
                   <img
