--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
         </p>
       </div>
       <div class="modal-footer">
-        <a href="#!" class="modal-close waves-effect waves-green btn-flat"
-          >Agree</a
-        >
+        <a href="#!" class="modal-close waves-effect waves-green btn-flat">
+          Close
+        </a>
       </div>
     </div>
 
