--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               height="30px"
               style="margin-top:14px; margin-left: -20px; position: absolute;"
               alt=""
-            /><span style="margin-left: 15px">Send Us A WhatsApp Message</span></a
+            /><span style="margin-left: 15px">Message Us</span></a
           >
         </p>
         <p>
@@ -110,7 +110,19 @@
               height="30px"
               style="margin-top:14px; margin-left: -20px; position: absolute;"
               alt=""
-            /><span style="margin-left: 30px">Shoot Us An Email</span></a
+            /><span style="margin-left: 30px">Email Us</span></a
+          >
+        </p>
+        <p>
+          <a
+            class="waves-effect waves-light btn-large buttons"
+            id="modal-call-button"
+            ><img
+              src="https://res.cloudinary.com/dcft8yhab/image/upload/v1579989401/whatsapp_icon.png"
+              height="30px"
+              style="margin-top:14px; margin-left: -20px; position: absolute;"
+              alt=""
+            /><span style="margin-left: 15px">Place A Call</span></a
           >
         </p>
       </div>
