adjust affiliate section to contain a link to a google form instead - change the mailchimp link to another mailchimp link - make some other minor css fixes

--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
           <ul class="right hide-on-med-and-down">
             <li><a href="#" class="nav-items">About Us</a></li>
             <li><a href="#solutions" class="nav-items">Solutions</a></li>
+            <li></li>
             <li>
+              <a href="#awesome_perks" class="nav-items">Awesome Perks</a>
             </li>
-            <li><a href="#awesome_perks" class="nav-items">Awesome Perks</a></li>
             <li>
               <a href="#affiliate" class="nav-items">Become An Affiliate</a>
             </li>
@@ -70,12 +71,13 @@
     </div>
     <div class="sidenav" id="mobile-demo">
       <a href="#!" class="brand-logo">
-        <img src="https://res.cloudinary.com/dcft8yhab/image/upload/v1579545975/spillcode_logo.svg"
-              height="50"
-              alt="company's logo"
-              class=""
-        /></a>
-        <hr>
+        <img
+          src="https://res.cloudinary.com/dcft8yhab/image/upload/v1579545975/spillcode_logo.svg"
+          height="50"
+          alt="company's logo"
+          class=""
+      /></a>
+      <hr />
       <ul>
         <li><a href="#">About Us</a></li>
         <li><a href="#solutions">Solutions</a></li>
@@ -145,7 +147,12 @@
           Shaping the world... one line at a time.
         </p>
         <p>
-          <button class="waves-effect waves-light btn-large buttons modal-trigger" data-target="contact_modal"> Request An Application</button>
+          <button
+            class="waves-effect waves-light btn-large buttons modal-trigger"
+            data-target="contact_modal"
+          >
+            Request An Application
+          </button>
         </p>
         <p>
           <a
@@ -205,7 +212,12 @@
                     ></span
                   >
                   <p>
-                    <button class="waves-effect waves-light btn-large buttons modal-trigger" data-target="contact_modal"> Contact Us</button>
+                    <button
+                      class="waves-effect waves-light btn-large buttons modal-trigger"
+                      data-target="contact_modal"
+                    >
+                      Contact Us
+                    </button>
                   </p>
                 </div>
                 <div class="card-reveal">
@@ -220,7 +232,12 @@
                     taking your business to the next level with ecommerce.
                   </p>
                   <p>
-                    <button class="waves-effect waves-light btn-large buttons modal-trigger" data-target="contact_modal"> Contact Us</button>
+                    <button
+                      class="waves-effect waves-light btn-large buttons modal-trigger"
+                      data-target="contact_modal"
+                    >
+                      Contact Us
+                    </button>
                   </p>
                 </div>
               </div>
@@ -243,7 +260,12 @@
                     ></span
                   >
                   <p>
-                    <button class="waves-effect waves-light btn-large buttons modal-trigger" data-target="contact_modal"> Contact Us</button>
+                    <button
+                      class="waves-effect waves-light btn-large buttons modal-trigger"
+                      data-target="contact_modal"
+                    >
+                      Contact Us
+                    </button>
                   </p>
                 </div>
                 <div class="card-reveal">
@@ -259,7 +281,12 @@
                     in contact with you. We got you covered.
                   </p>
                   <p>
-                    <button class="waves-effect waves-light btn-large buttons modal-trigger" data-target="contact_modal"> Contact Us</button>
+                    <button
+                      class="waves-effect waves-light btn-large buttons modal-trigger"
+                      data-target="contact_modal"
+                    >
+                      Contact Us
+                    </button>
                   </p>
                 </div>
               </div>
@@ -282,7 +309,12 @@
                     >Blogs<i class="material-icons right">more_vert</i></span
                   >
                   <p>
-                    <button class="waves-effect waves-light btn-large buttons modal-trigger" data-target="contact_modal"> Contact Us</button>
+                    <button
+                      class="waves-effect waves-light btn-large buttons modal-trigger"
+                      data-target="contact_modal"
+                    >
+                      Contact Us
+                    </button>
                   </p>
                 </div>
                 <div class="card-reveal">
@@ -296,7 +328,12 @@
                     about.
                   </p>
                   <p>
-                    <button class="waves-effect waves-light btn-large buttons modal-trigger" data-target="contact_modal"> Contact Us</button>
+                    <button
+                      class="waves-effect waves-light btn-large buttons modal-trigger"
+                      data-target="contact_modal"
+                    >
+                      Contact Us
+                    </button>
                   </p>
                 </div>
               </div>
@@ -320,7 +357,12 @@
                     ></span
                   >
                   <p>
-                    <button class="waves-effect waves-light btn-large buttons modal-trigger" data-target="contact_modal"> Contact Us</button>
+                    <button
+                      class="waves-effect waves-light btn-large buttons modal-trigger"
+                      data-target="contact_modal"
+                    >
+                      Contact Us
+                    </button>
                   </p>
                 </div>
                 <div class="card-reveal">
@@ -335,7 +377,12 @@
                     beautiful look you'll love.
                   </p>
                   <p>
-                    <button class="waves-effect waves-light btn-large buttons modal-trigger" data-target="contact_modal"> Contact Us</button>
+                    <button
+                      class="waves-effect waves-light btn-large buttons modal-trigger"
+                      data-target="contact_modal"
+                    >
+                      Contact Us
+                    </button>
                   </p>
                 </div>
               </div>
@@ -349,7 +396,7 @@
       <!-- Begin Mailchimp Signup Form -->
       <div id="mc_embed_signup" class="container">
         <form
-          action="https://gmail.us4.list-manage.com/subscribe/post?u=7cea96681a6e2c68bc5154977&amp;id=cec4af8cf3"
+          action="https://gmail.us19.list-manage.com/subscribe/post?u=c23a03cef8812628f5da1dac0&amp;id=2baf211fad"
           method="post"
           id="mc-embedded-subscribe-form"
           name="mc-embedded-subscribe-form"
@@ -415,7 +462,9 @@
       <section class="extras-inner-container">
         <div class="row">
           <div class="col s12 m7 l6">
-            <div class="card-panel grey lighten-5 z-depth-1 stunning-web-designs">
+            <div
+              class="card-panel grey lighten-5 z-depth-1 stunning-web-designs"
+            >
               <div class="row valign-wrapper">
                 <div class="col s2">
                   <img
@@ -427,14 +476,14 @@
                 </div>
                 <div class="col s10">
                   <span class="black-text">
-                    <b
-                      style="display: block; line-height: 0;"
+                    <b style="display: block; line-height: 0;"
                       >STUNNING WEB DESIGNS</b
                     >
                     <br />
-                    Beautiful websites attracts people and make them want to interract more
-                    with your website. Knowing this, we make sure we develop high performant 
-                    sites/apps but with stunning designs.
+                    Beautiful websites attracts people and make them want to
+                    interract more with your website. Knowing this, we make sure
+                    we develop high performant sites/apps but with stunning
+                    designs.
                   </span>
                 </div>
               </div>
@@ -443,7 +492,9 @@
         </div>
         <div class="row">
           <div class="col s12 m7 l6 offset-l6 offset-m4">
-            <div class="card-panel grey lighten-5 z-depth-1 great-customer-support">
+            <div
+              class="card-panel grey lighten-5 z-depth-1 great-customer-support"
+            >
               <div class="row valign-wrapper">
                 <div class="col s2">
                   <img
@@ -455,13 +506,13 @@
                 </div>
                 <div class="col s10">
                   <span class="black-text">
-                    <b
-                      style="display: block; line-height: 0;"
+                    <b style="display: block; line-height: 0;"
                       >GREAT CUSTOMER SUPPORT</b
-                    ><br/>
-                    We know that when we treat you well, you're likely to even recommend us to others too.
-                    Having this in mind that you might even have other needs after the job is done, we make sure
-                    we attend to you even after the job has been done.
+                    ><br />
+                    We know that when we treat you well, you're likely to even
+                    recommend us to others too. Having this in mind that you
+                    might even have other needs after the job is done, we make
+                    sure we attend to you even after the job has been done.
                   </span>
                 </div>
               </div>
@@ -482,13 +533,13 @@
                 </div>
                 <div class="col s10">
                   <span class="black-text">
-                    <b
-                      style="display: block; line-height: 0;"
+                    <b style="display: block; line-height: 0;"
                       >BUSINESS GROWTH TIPS</b
-                    ><br/>
-                    By joining our mailing list, we provide you with tips on how to grow your business and 
-                    online attention. Quality growth takes time, and we make sure to help guide you in 
-                    making the right decisions for your business.
+                    ><br />
+                    By joining our mailing list, we provide you with tips on how
+                    to grow your business and online attention. Quality growth
+                    takes time, and we make sure to help guide you in making the
+                    right decisions for your business.
                   </span>
                 </div>
               </div>
@@ -509,13 +560,11 @@
                 </div>
                 <div class="col s10">
                   <span class="black-text">
-                    <b
-                      style="display: block; line-height: 0;"
-                      >SCALABILITY</b
-                    ><br/>
-                    There's always something extra you might want to add in the future
-                    We build our softwares to accomodate these future changes and help you
-                    bring your immaginations to life!
+                    <b style="display: block; line-height: 0;">SCALABILITY</b
+                    ><br />
+                    There's always something extra you might want to add in the
+                    future We build our softwares to accomodate these future
+                    changes and help you bring your immaginations to life!
                   </span>
                 </div>
               </div>
@@ -523,8 +572,10 @@
           </div>
         </div>
         <p class="center-align">
-
-          <button class="waves-effect waves-light btn-large buttons extras-button modal-trigger" data-target="contact_modal">
+          <button
+            class="waves-effect waves-light btn-large buttons extras-button modal-trigger"
+            data-target="contact_modal"
+          >
             Request a Website/Modile Application Now
           </button>
         </p>
@@ -543,73 +594,25 @@
         </div>
         <div class="col s12 m6 lg">
           <p class="affiliate-text">
-            By becoming an affiliate, you signup to be a third party member of our team.
-            As an affiliate, you're not required to know anything about coding, all you
-            have to do is to refer clients to us. For early birds into the affliate,
-            you'll get as high as 20% of our profit, if the deal is successful.
-            Join Our Affliates program now!
+            By becoming an affiliate, you signup to be a third party member of
+            our team. As an affiliate, you're not required to know anything
+            about coding, all you have to do is to refer clients to us. For
+            early birds into the affliate, you'll get as high as 20% of our
+            profit, if the deal is successful. Join Our Affliates program now!
           </p>
         </div>
       </div>
       <!-- Begin Mailchimp Signup Form -->
       <div id="mc_embed_signup" class="container">
-        <form
-          action="https://gmail.us4.list-manage.com/subscribe/post?u=7cea96681a6e2c68bc5154977&amp;id=cec4af8cf3"
-          method="post"
-          id="mc-embedded-subscribe-form"
-          name="mc-embedded-subscribe-form"
-          class="validate"
-          target="_blank"
-          novalidate
-        >
-          <div id="mc_embed_signup_scroll">
-            <label for="mce-EMAIL"
+          <div id="">
               ><p class="heading" id="affiliate-subscribe-mail-heading">
                 Become An Affiliate
-              </p></label
-            >
+              </p>
             <p class="center-align" id="affiliate-extra-text">
-              We would send you a mail and add you to our list of affiliates
-              when you provide your email to us!
+              Fill out this short google form to join the affiliiate program 
             </p>
-            <input
-              type="email"
-              value=""
-              name="EMAIL"
-              class="email email-input-field hide-on-small-only"
-              id="mce-EMAIL"
-              placeholder="email address"
-              required
-            />
-            <input
-              type="email"
-              value=""
-              name="EMAIL"
-              class="email email-input-field-mobile hide-on-med-and-up"
-              id="mce-EMAIL"
-              placeholder="email address"
-              required
-            />
-            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;" aria-hidden="true">
-              <input
-                type="text"
-                name="b_7cea96681a6e2c68bc5154977_cec4af8cf3"
-                tabindex="-1"
-                value=""
-              />
-            </div>
-            <div class="clear">
-              <input
-                type="submit"
-                value="Subscribe"
-                name="subscribe"
-                id="mc-embedded-subscribe"
-                class="button class email-input-field-button"
-              />
-            </div>
+            <button class="btn white" id="affilite-buton"><a href="https://forms.gle/1W5CeGMr3xHBWaLKA" target="_blank">Go to form</a></button>
           </div>
-        </form>
       </div>
 
       <!--End mc_embed_signup-->
@@ -628,7 +631,13 @@
           <p class="getting-started-text">
             Want a Website or Mobile Application?
           </p>
-          <button id="getting-started-button" class="modal-trigger" data-target="contact_modal">ORDER!</button>
+          <button
+            id="getting-started-button"
+            class="modal-trigger"
+            data-target="contact_modal"
+          >
+            ORDER!
+          </button>
         </div>
       </div>
     </article>
