--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
           <a
             class="waves-effect waves-light btn-large buttons"
             id="whatsapp-top-button"
+            href="https://chat.whatsapp.com/FfJFJMh7wFKGTIwsH1yisD"
             ><img
               src="https://res.cloudinary.com/dcft8yhab/image/upload/v1579989401/whatsapp_icon.png"
               height="30px"
